--- a/Papers/SSBSE/ref.bib
+++ b/Papers/SSBSE/ref.bib
@@ -8,13 +8,25 @@
  location = {Essen, Germany},
  pages = {1--14},
  numpages = {14},
- url = {http://doi.acm.org/10.1145/2351676.2351678},
  doi = {10.1145/2351676.2351678},
  acmid = {2351678},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {Compilation, Genetic Programming, Non-functional Properties, Pareto Surface, SBSE, Search Based Optimization},
 } 
+
+@ARTICLE{5688317, 
+author={D. R. White and A. Arcuri and J. A. Clark}, 
+journal={IEEE Transactions on Evolutionary Computation}, 
+title={Evolutionary Improvement of Programs}, 
+year={2011}, 
+volume={15}, 
+number={4}, 
+pages={515-538}, 
+keywords={genetic algorithms;optimising compilers;probability;program testing;software engineering;GP;coevolution;evolutionary improvement;genetic programming;multiobjective optimization;optimizing compilers;probability distribution;software engineering;software testing;Evolutionary computation;Genetic programming;Optimization;Program processors;Semantics;Sorting;Coevolution;embedded systems;execution time;genetic programming;multiobjective optimization;non-functional criteria;search based software engineering}, 
+doi={10.1109/TEVC.2010.2083669}, 
+ISSN={1089-778X}, 
+month={Aug},}
 
 @ARTICLE{6733370,
 author={Langdon, W.B. and Harman, M.},
@@ -67,7 +79,6 @@ language={English}
  location = {Madrid, Spain},
  pages = {1375--1382},
  numpages = {8},
- url = {http://doi.acm.org/10.1145/2739480.2754648},
  doi = {10.1145/2739480.2754648},
  acmid = {2754648},
  publisher = {ACM},
@@ -85,7 +96,6 @@ year = "2001",
 note = "",
 issn = "0950-5849",
 doi = "http://dx.doi.org/10.1016/S0950-5849(01)00189-6",
-url = "http://www.sciencedirect.com/science/article/pii/S0950584901001896",
 author = "Mark Harman and Bryan F Jones",
 keywords = "Software engineering",
 keywords = "Metaheuristic",
@@ -104,6 +114,24 @@ language={English},
 %url={http://dx.doi.org/10.1007/978-3-642-23716-4_6}
 }
 
+@inproceedings{Harman:2014:AME:2642937.2643008,
+ author = {Harman, Mark and Jia, Yue and Reales Mateo, Pedro and Polo, Macario},
+ title = {Angels and Monsters: An Empirical Investigation of Potential Test Effectiveness and Efficiency Improvement from Strongly Subsuming Higher Order Mutation},
+ booktitle = {Proceedings of the 29th ACM/IEEE International Conference on Automated Software Engineering},
+ series = {ASE '14},
+ year = {2014},
+ isbn = {978-1-4503-3013-8},
+ location = {Vasteras, Sweden},
+ pages = {397--408},
+ numpages = {12},
+ doi = {10.1145/2642937.2643008},
+ acmid = {2643008},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {higher order mutants, mutation testing},
+} 
+
+
 @inproceedings{Bruce:2015:REC:2739480.2754752,
  author = {Bruce, Bobby R. and Petke, Justyna and Harman, Mark},
  title = {Reducing Energy Consumption Using Genetic Improvement},
@@ -114,7 +142,6 @@ language={English},
  location = {Madrid, Spain},
  pages = {1327--1334},
  numpages = {8},
- url = {http://doi.acm.org/10.1145/2739480.2754752},
  doi = {10.1145/2739480.2754752},
  acmid = {2754752},
  publisher = {ACM},
@@ -142,13 +169,52 @@ language={English},
  location = {Madrid, Spain},
  pages = {803--804},
  numpages = {2},
- url = {http://doi.acm.org/10.1145/2739482.2768417},
  doi = {10.1145/2739482.2768417},
  acmid = {2768417},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {GI, SBSE, higher order mutation},
 }
+
+
+@TECHREPORT{AgrawalDHHHKMMS89,
+  author = {Hiralal Agrawal and Richard A. DeMillo and Bob Hathaway and William Hsu and Wynne Hsu and E. W. Krauser and R. J. Martin and Aditya P. Mathur and Eugene Spafford},
+  title = {Design of Mutant Operators for the C Programming Language},
+  institution = {Purdue University},
+  year = {1989},
+  type = {techreport},
+  number = {SERC-TR-41-P},
+  address = {West Lafayette, Indiana}, 
+  month = {March}, 
+}
+
+@article{Jia20091379,
+title = "Higher Order Mutation Testing ",
+journal = "Information and Software Technology ",
+volume = "51",
+number = "10",
+pages = "1379 - 1393",
+year = "2009",
+note = "Source Code Analysis and Manipulation, \{SCAM\} 2008 ",
+issn = "0950-5849",
+doi = "http://dx.doi.org/10.1016/j.infsof.2009.04.016",
+author = "Yue Jia and Mark Harman",
+keywords = "Mutation Testing",
+keywords = "Higher order mutant",
+keywords = "Search techniques "
+}
+@INPROCEEDINGS{7194639, 
+author={M. Papadakis and Y. Jia and M. Harman and Y. Le Traon}, 
+booktitle={2015 IEEE/ACM 37th IEEE International Conference on Software Engineering}, 
+title={Trivial Compiler Equivalence: A Large Scale Empirical Study of a Simple, Fast and Effective Equivalent Mutant Detection Technique}, 
+year={2015}, 
+volume={1}, 
+pages={936-946}, 
+keywords={formal verification;program compilers;program testing;TCE technique;duplicated mutants;human-based equivalence verification;mutant detection technique;mutation testing;trivial compiler equivalence technology;Benchmark testing;Java;Optimization;Scalability;Syntactics}, 
+doi={10.1109/ICSE.2015.103}, 
+ISSN={0270-5257}, 
+month={May},}
+
 
 @article{weimerGPEM14,
 year={2014},
@@ -247,7 +313,6 @@ keywords = "Memory mutation "
  year = {2006},
  isbn = {1-59593-320-4},
  location = {Ottawa, Ontario, Canada},
- url = {http://doi.acm.org/10.1145/1133981.1134000},
  doi = {10.1145/1133981.1134000},
  acmid = {1134000},
  old_publisher = {ACM},
@@ -263,7 +328,6 @@ volume={10},
 number={4},
 doi={10.1007/s10664-005-3861-2},
 title={Supporting Controlled Experimentation with Testing Techniques: An Infrastructure and its Potential Impact},
-url={http://dx.doi.org/10.1007/s10664-005-3861-2},
 publisher={Kluwer Academic Publishers},
 keywords={Software testing; regression testing; controlled experimentation; experiment infrastructure},
 author={Do, Hyunsook and Elbaum, Sebastian and Rothermel, Gregg},
@@ -278,7 +342,6 @@ language={English}
  year = {2014},
  isbn = {978-1-4503-2662-9},
  location = {Vancouver, BC, Canada},
- url = {http://doi.acm.org/10.1145/2576768.2598244},
  doi = {10.1145/2576768.2598244},
  acmid = {2598244},
  old_publisher = {ACM},
@@ -303,7 +366,6 @@ journal = {Software Testing, Verification and Reliability},
 volume = {24},
 number = {3},
 issn = {1099-1689},
-url = {http://dx.doi.org/10.1002/stvr.1486},
 doi = {10.1002/stvr.1486},
 pages = {219--250},
 keywords = {statistical difference, effect size, parametric test, nonparametric test, confidence interval, Bonferroni adjustment, systematic review, survey},
@@ -328,14 +390,13 @@ isbn="978-3-319-22183-0"
 @inproceedings{Barr:2014:PSH:2635868.2635898,
  author = {Barr, Earl T. and Brun, Yuriy and Devanbu, Premkumar and Harman, Mark and Sarro, Federica},
  title = {The Plastic Surgery Hypothesis},
- booktitle = {Proceedings of the 22Nd ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+ booktitle = {Proceedings of the 22nd ACM SIGSOFT International Symposium on Foundations of Software Engineering},
  series = {FSE 2014},
  year = {2014},
  isbn = {978-1-4503-3056-5},
  location = {Hong Kong, China},
  pages = {306--317},
  numpages = {12},
- url = {http://doi.acm.org/10.1145/2635868.2635898},
  doi = {10.1145/2635868.2635898},
  acmid = {2635898},
  publisher = {ACM},
@@ -385,7 +446,6 @@ isbn="978-3-319-22183-0"
  year = {2008},
  isbn = {978-1-60558-037-1},
  location = {Leipzig, Germany},
- url = {http://doi.acm.org/10.1145/1370018.1370031},
  doi = {10.1145/1370018.1370031},
  acmid = {1370031},
  old_publisher = {ACM},
@@ -507,7 +567,6 @@ isbn={978-3-540-20359-9},
 booktitle={High Performance Computing},
 doi={10.1007/978-3-540-39707-6_11},
 title={FIBER: A Generalized Framework for Auto-tuning Software},
-url={http://dx.doi.org/10.1007/978-3-540-39707-6_11},
 old_publisher={Springer Berlin Heidelberg},
 keywords={Auto-Tuning; Parameter optimization; Numerical library; Performance modeling; Eigensolver},
 author={Katagiri, Takahiro and Kise, Kenji and Honda, Hiroaki and Yuba, Toshitsugu},
@@ -606,9 +665,7 @@ doi={10.1109/ICST.2010.30},}
 year={2014},
 isbn={978-3-662-44302-6},
 booktitle={Genetic Programming},
-doi={10.1007/978-3-662-44303-3_12},
 title={Using Genetic Improvement and Code Transplants to Specialise a C++ Program to a Problem Class},
-url={http://dx.doi.org/10.1007/978-3-662-44303-3_12},
 keywords={genetic improvement; code transplants; code specialisation; Boolean satisfiability},
 author={Petke, Justyna and Harman, Mark and Langdon, WilliamB. and Weimer, Westley},
 language={English}
