--- a/Papers/SSBSE/ref.bib
+++ b/Papers/SSBSE/ref.bib
@@ -61,9 +61,7 @@ booktitle={Search Based Software Engineering},
 volume={8084},
 series={Lecture Notes in Computer Science},
 editor={Ruhe, Günther and Zhang, Yuanyuan},
-doi={10.1007/978-3-642-39742-4\_21},
 title={Applying Genetic Improvement to MiniSAT},
-url={http://dx.doi.org/10.1007/978-3-642-39742-4\_21},
 keywords={Genetic Improvement; GISMOE; SAT},
 author={Petke, Justyna and Langdon, WilliamB. and Harman, Mark},
 language={English}
@@ -179,7 +177,7 @@ language={English},
 
 @TECHREPORT{AgrawalDHHHKMMS89,
   author = {Hiralal Agrawal and Richard A. DeMillo and Bob Hathaway and William Hsu and Wynne Hsu and E. W. Krauser and R. J. Martin and Aditya P. Mathur and Eugene Spafford},
-  title = {Design of Mutant Operators for the C Programming Language},
+  title = {Design of Mutant Operators for the {C} Programming Language},
   institution = {Purdue University},
   year = {1989},
   type = {techreport},
@@ -195,7 +193,7 @@ volume = "51",
 number = "10",
 pages = "1379 - 1393",
 year = "2009",
-note = "Source Code Analysis and Manipulation, \{SCAM\} 2008 ",
+note = "{S}ource Code Analysis and Manipulation",
 issn = "0950-5849",
 doi = "http://dx.doi.org/10.1016/j.infsof.2009.04.016",
 author = "Yue Jia and Mark Harman",
@@ -336,7 +334,7 @@ language={English}
 
 @inproceedings{Langdon:2014:IMI:2576768.2598244,
  author = {Langdon, William B. and Modat, Marc and Petke, Justyna and Harman, Mark},
- title = {Improving 3D Medical Image Registration CUDA Software with Genetic Programming},
+ title = {Improving {3D} Medical Image Registration {CUDA} Software with Genetic Programming},
  booktitle = {Conference on Genetic and Evolutionary Computation},
  series = {GECCO '14},
  year = {2014},
@@ -382,7 +380,6 @@ chapter="Transformed Vargha-Delaney Effect Size",
 title="Search-Based Software Engineering: 7th International Symposium, SSBSE 2015, Bergamo, Italy, September 5-7, 2015, Proceedings",
 year="2015",
 publisher="Springer International Publishing",
-address="Cham",
 pages="318--324",
 isbn="978-3-319-22183-0"
 }
@@ -665,7 +662,7 @@ doi={10.1109/ICST.2010.30},}
 year={2014},
 isbn={978-3-662-44302-6},
 booktitle={Genetic Programming},
-title={Using Genetic Improvement and Code Transplants to Specialise a C++ Program to a Problem Class},
+title={Using Genetic Improvement and Code Transplants to Specialise a {C++} Program to a Problem Class},
 keywords={genetic improvement; code transplants; code specialisation; Boolean satisfiability},
 author={Petke, Justyna and Harman, Mark and Langdon, WilliamB. and Weimer, Westley},
 language={English}
