--- a/Papers/SSBSE/ref.bib
+++ b/Papers/SSBSE/ref.bib
@@ -108,8 +108,7 @@ author={Arcuri, Andrea and Fraser, Gordon},
 doi={10.1007/978-3-642-23716-4_6},
 title={On Parameter Tuning in Search Based Software Engineering},
 keywords={Search based software engineering; test data generation; object-oriented; unit testing},
-language={English},
-%url={http://dx.doi.org/10.1007/978-3-642-23716-4_6}
+language={English}
 }
 
 @inproceedings{Harman:2014:AME:2642937.2643008,
